fixing spacing

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 
 h1 {
   font-family: 'Staatliches';
-  font-size: 80px;
+  font-size: 50px;
   margin-top: 8%;
   text-align: right;
   animation-name: fade;
